[gd_scene load_steps=5 format=4 uid="uid://cu1ldntnivb8j"]

[ext_resource type="Script" uid="uid://cp50y7rdio8mm" path="res://scripts/main_menu.gd" id="1_yqorp"]
[ext_resource type="Texture2D" uid="uid://cads8sa417atu" path="res://icon.svg" id="2_0ykhv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2wh52"]
texture = ExtResource("2_0ykhv")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_ow34m"]
sources/0 = SubResource("TileSetAtlasSource_2wh52")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yqorp")

[node name="Background" type="TileMapLayer" parent="."]
scale = Vector2(10, 10)
tile_map_data = PackedByteArray("AAACAAAAAAAAAAAAAAACAAEAAAAAAAEAAAACAAIAAAAAAAIAAAACAAMAAAAAAAMAAAACAAQAAAAAAAQAAAACAAUAAAAAAAUAAAACAAYAAAAAAAYAAAADAAAAAAABAAAAAAADAAEAAAABAAEAAAADAAIAAAABAAIAAAADAAMAAAABAAMAAAADAAQAAAABAAQAAAADAAUAAAABAAUAAAADAAYAAAABAAYAAAAEAAAAAAACAAAAAAAEAAEAAAACAAEAAAAEAAIAAAACAAIAAAAEAAMAAAACAAMAAAAEAAQAAAACAAQAAAAEAAUAAAACAAUAAAAEAAYAAAACAAYAAAAFAAAAAAADAAAAAAAFAAEAAAADAAEAAAAFAAIAAAADAAIAAAAFAAMAAAADAAMAAAAFAAQAAAADAAQAAAAFAAUAAAADAAUAAAAFAAYAAAADAAYAAAAGAAAAAAAEAAAAAAAGAAEAAAAEAAEAAAAGAAIAAAAEAAIAAAAGAAMAAAAEAAMAAAAGAAQAAAAEAAQAAAAGAAUAAAAEAAUAAAAGAAYAAAAEAAYAAAAHAAAAAAAFAAAAAAAHAAEAAAAFAAEAAAAHAAIAAAAFAAIAAAAHAAMAAAAFAAMAAAAHAAQAAAAFAAQAAAAHAAUAAAAFAAUAAAAHAAYAAAAFAAYAAAAIAAAAAAAGAAAAAAAIAAEAAAAGAAEAAAAIAAIAAAAGAAIAAAAIAAMAAAAGAAMAAAAIAAQAAAAGAAQAAAAIAAUAAAAGAAUAAAAIAAYAAAAGAAYAAAAJAAAAAAAHAAAAAAAJAAEAAAAHAAEAAAAJAAIAAAAHAAIAAAAJAAMAAAAHAAMAAAAJAAQAAAAHAAQAAAAJAAUAAAAHAAUAAAAJAAYAAAAHAAYAAAA=")
tile_set = SubResource("TileSet_ow34m")

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 1017.0
offset_right = 110.0
offset_bottom = 1055.0
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 924.0
offset_top = 480.0
offset_right = 1095.0
offset_bottom = 599.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="InfiniteMode" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Infinite Mode
"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits
"

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/InfiniteMode" to="." method="_on_infinite_mode_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_button_pressed"]
